--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for(@cocktail) do |f| %>
     <%= f.input :name %>
     <%= f.input :picture %>
+    <%= f.input :photo, as: :file %>
     <%= f.input :description, as: :text %>
     <%= f.button :submit, class: "btn btn-primary" %>
 <% end %>
