--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -11,6 +11,7 @@
     <div class="card">
       <h1><%= @cocktail.name %></h1>
       <%= image_tag "#{@cocktail.picture}", width: 400, height: 400 %>
+      <%= cl_image_tag @cocktail,photo.key, width: 400, height: 300, crop: :fill) %>
       <p>Description: <%= @cocktail.description %></p>
       <p>Ingredients:</p>
         <% @cocktail.doses.each do |dose| %>
