--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -7,7 +7,7 @@
 
 
 <div class="container m-3">
-  <%= cl_image_tag @cocktail.photo.key, width: 400, height: 300, crop: :fill) %>
+  <%= cl_image_tag @cocktail.photo.key, width: 400, height: 300, crop: :fill %>
   <div class>
     <div class="card">
       <h1><%= @cocktail.name %></h1>
