--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,19 +1,29 @@
-<div class="container m-3">
 
-  <h1 class="">Cocktails</h1>
-  <%= link_to "Add Cocktail",  new_cocktail_path %>
+<!-- <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1560963689-b5682b6440f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);">
 
-    <% @cocktails.each do |cocktail| %>
-    <div class="">
-      <div class="card">
-        <%= image_tag "#{cocktail.picture}", width: 200, height: 200 %>
-        <%= link_to "#{cocktail.name}", cocktail_path(cocktail) %>
-        <%= link_to "Delete", cocktail_path(cocktail),
-            method: :delete,
-            data: { confirm: "Are you sure?" } %>
-      </div>
-    <% end %>
+</div> -->
 
 
+
+
+<h1 class="">Cocktails</h1>
+
+  <div class="container m-3">
+    <div class="cards">
+      <% @cocktails.each do |cocktail| %>
+        <div class="mr-3">
+          <div class="card-category">
+            <%= cl_image_tag cocktail.photo.key, width: 150, height: 150, crop: :fill %>
+          </div>
+          <div class="text-right thrash">
+            <%= link_to "#{cocktail.name}", cocktail_path(cocktail) %>
+            <%= link_to cocktail_path(cocktail),
+                method: :delete,
+                data: { confirm: "Are you sure?" } do %>
+                 <i class="fas fa-trash"></i>
+            <% end %>
+          </div>
+          </div>
+      <% end %>
     </div>
-</div>
+  </div>
